src/main/webapp/assets/css/home.css
@import url('./layout/topbar.css');
@import url('./layout/tokens.css');
@import url('./layout/navbar.css');

.hero {
    position: relative;
    background: linear-gradient(to left, #9094ff 0%, #5750de 50%, #4361EE 100%);
    border-radius: 1rem;
    padding: 24px 32px;
    overflow: hidden;
    width: 80%;
    height: 22vh;
    max-height: 260px;
    min-height: 160px;
    display: flex;
    align-items: center;
    margin: 0 auto;
    color: white;
}

.hero h1 {
    font-weight: var(--text-semi-bold);
    font-size: var(--text-2xl);
    margin-bottom: var(--space-2);
}

.hero p {
    margin: 0;
}

.hero::after {
    content: "";
    position: absolute;
    inset: 0;
    background: url("../img/fundo-hero.svg") no-repeat center;
    background-size: cover;
    pointer-events: none;
    z-index: 0;
}

.hero-illustration {
    position: absolute;
    right: 3%;
    bottom: 16%;
    height: 80%;
    z-index: 1;
}

.primary-button {
    background-color: white;
    color: var(--primary-color);
    margin-top: var(--space-6);
    padding: var(--space-2) var(--space-5);
    border: none;
    border-radius: var(--medium-radius);
    font-size: var(--text-sm);
    font-weight: var(--text-semi-bold);
    cursor: pointer;
    transition: background-color var(--transition-fast);
}

.primary-button:hover {
    background-color: rgba(255, 255, 255, 0.4);
    color: white;
}

.dashboard-grid {
    width: 80%;
    margin-top: var(--space-6);
    margin-left: -30px;
}

.dashboard-view {
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: var(--space-5);
}

.card-tasks {
    background: var(--surface-color);
    padding: var(--space-7);
    border-radius: 16px;
    transition: background-color 0.3s ease;
}

.lateral {
    display: flex;
    flex-direction: column;
    gap: var(--space-5);
}

.task-list {
    list-style: none;
    padding: 0;
    margin-top: 1rem;
}

.task {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: var(--space-5);
    border-radius: 12px;
    margin-bottom: 1rem;
    border: 1px solid var(--border-color);
    transition: border-color 0.3s ease;
}

.task-title {
    color: var(--text-color);
}

.task p {
    margin: 0;
    font-size: var(--text-sm);
    color: var(--muted-text-color);
}

.status.overdue {
    color: var(--red-secondary-color);
}

.status.on-time {
    color: var(--green-secondary-color);
}

.status.near {
    color: var(--purple-secondary-color);
}

.card-performance,
.card-students-alert {
    background: var(--surface-color);
    padding: var(--space-5);
    border-radius: 16px;
    width: 100%;
    transition: background-color 0.3s ease;
}

.card-header.pendences {
    margin-bottom: var(--space-6);
}

.card-header h2 {
    font-size: 1.2rem;
    font-weight: 600;
    color: var(--text-color);
}

.card-performance {
    height: 180px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    padding-top: var(--space-5);
    padding-bottom: var(--space-8);
}

.performance-wrapper {
    display: flex;
    flex-direction: column;
    gap: var(--space-4);
    align-items: center;
}

.performance-row {
    display: flex;
    gap: var(--space-4);
    width: 100%;
    justify-content: center;
}

.performance-row.center {
    justify-content: center;
}

.pill {
    min-width: 120px;
    text-align: center;
    padding: 10px 0;
    border-radius: 1000px;
    font-weight: var(--text-semi-bold);
    color: white;
}

.pill.approved {
    background: var(--green-secondary-color);
}

.pill.failed {
    background: var(--red-secondary-color);
}

.pill.pending {
    background: var(--purple-secondary-color);
}

.performance-legend {
    display: flex;
    gap: var(--space-4);
    font-size: var(--text-sm);
    color: var(--text-color);
}

.dot {
    width: 10px;
    height: 10px;
    border-radius: 2px;
    display: inline-block;
    margin-right: 6px;
}

.dot.approved {
    background: var(--green-secondary-color);
}

.dot.failed {
    background: var(--red-secondary-color);
}

.dot.pending {
    background: var(--purple-secondary-color);
}

.card-students-alert {
    max-height: 260px;
    overflow-y: auto;
}

.student-list {
    list-style: none;
    padding: 0;
    margin-top: var(--space-4);
}

.student-list img {
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

.student-list strong {
    display: block;
    font-size: 0.95rem;
    color: var(--text-color);
}

.student-list span {
    font-size: 0.8rem;
    color: var(--muted-text-color);
    font-weight: var(--text-medium);
}

.student-list .avg {
    color: var(--red-secondary-color);
    font-weight: var(--text-medium);
}

.details {
    background-color: var(--primary-color);
    color: white;
    border: none;
    border-radius: var(--medium-radius);
    padding: var(--space-2) var(--space-4);
    font-size: var(--text-sm);
    font-weight: var(--text-medium);
    cursor: pointer;
}

.details:hover {
    background-color: var(--button-hover-color);
    transition: ease-in-out var(--transition-fast);
}

.status {
    color: var(--text-color);
    font-weight: var(--text-medium);
}

.date.overdue {
    color: var(--red-secondary-color);
}

.lateral {
    display: flex;
    flex-direction: column;
    gap: var(--space-5);
}

.task p {
    font-size: var(--text-md);
    font-weight: var(--text-medium);
    display: flex;
    gap: var(--space-2);
    margin-top: var(--space-4);
}

.student-alert {
    display: flex;
    align-items: center;
    margin-bottom: var(--space-4);
    background-color: var(--background-color1);
    border-radius: var(--medium-radius);
    gap: 0.8rem;
    padding: 0.5rem 0;
    transition: background-color 0.3s ease;
}

.student-pic {
    width: 80px;
    height: 80px;
    border-radius: 50%;
    margin-left: var(--space-4);
}

